--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,19 @@
 {
-	"name" : "alsar/monolog-extensions",
-	"description": "Extensions for Monolog",
-	"type" : "library",
-	"license" : "MIT",
-	"keywords" : [
-		"monolog"
-	],
-	"require" : {
-		"php" : ">=5.4",
-		"monolog/monolog" : "~1.7",
+    "name" : "alsar/monolog-extensions",
+    "description" : "Extensions for Monolog",
+    "type" : "library",
+    "license" : "MIT",
+    "keywords" : ["monolog"],
+    "require" : {
+        "php" : ">=5.4",
+        "monolog/monolog" : "~1.7",
         "garetjax/phpbrowscap" : "~2.0b",
         "symfony/security-core" : "~2.3",
         "symfony/http-foundation" : "~2.3"
-	},
-	"autoload" : {
-		"psr-0" : {
-			"Alsar\\Monolog\\" : "src/"
-		}
-	}
+    },
+    "autoload" : {
+        "psr-0" : {
+            "Alsar\\Monolog\\" : "src/"
+        }
+    }
 }
